--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -104,7 +104,7 @@ router adaptive-virtual-topology
 router path-selection
    tcp mss ceiling ipv4 ingress
    !
-   path-group LAN_HA id 65535
+   path-group arista-ha id 65535
       ipsec profile DP-PROFILE
       flow assignment lan
       !
@@ -131,34 +131,34 @@ router path-selection
          ipv4 address 172.16.0.1
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS priority 4223
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       hop count lowest
       jitter 42
-      path-group LAN_HA
+      path-group arista-ha
       path-group MPLS
 !
 spanning-tree mode none
