--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3546,6 +3546,21 @@ keys:
       new_key: wan_router
       removed: true
       remove_in_version: 4.6.0-dev1
+  wan_ha:
+    documentation_options:
+      table: wan-settings
+    type: dict
+    keys:
+      lan_ha_path_group_name:
+        type: str
+        default: LAN_HA
+        description: 'PREVIEW: This key is currently not supported
+
+
+          When WAN HA is enabled for a site if `wan_mode: cv-pathfinder`, a default
+          path-group is injected to form DPS tunnels over LAN.
+
+          This key allows to overwrite the default LAN HA path-group name.'
   wan_ipsec_profiles:
     documentation_options:
       table: wan-settings
