Fixing the template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -33,11 +33,11 @@ event-handler trigger-on-maintenance
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance1
-   trigger on-maintenance enter bgp 10.0.0.2 after linkdown
+   trigger on-maintenance enter bgp 10.0.0.2 after stage linkdown
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance2
-   trigger on-maintenance enter unit unit1 before bgp
+   trigger on-maintenance enter unit unit1 before stage bgp
    action bash echo "on-maintenance"
 !
 end
