Refactor(eos_designs): Make DHCP default route generated by default

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -101,7 +101,7 @@ wan_router:
             - name: Ethernet1
               wan_carrier: Inmrasat
               wan_circuit_id: S511
-              dhcp_accept_default_route: true
+              dhcp_accept_default_route: false
               ip_address: dhcp
             - name: Ethernet2
               wan_carrier: AWS-1
