--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3B.cfg
@@ -48,6 +48,7 @@ interface Port-Channel7
    switchport trunk allowed vlan none
    switchport mode trunk
    mlag 7
+   isis enable EVPN_UNDERLAY
    isis bfd
 !
 interface Ethernet1
