--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3B.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3B.yml
@@ -137,6 +137,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: none
   mlag: 7
+  isis_enable: EVPN_UNDERLAY
   isis_bfd: true
 ethernet_interfaces:
 - name: Ethernet5
