Test: Run da molecule

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
@@ -38,6 +38,7 @@ interface Ethernet42
    shutdown
    no switchport
    ip address dhcp
+   dhcp client accept default-route
 !
 interface Ethernet43
    shutdown
