Feat(eos_designs): Allow custom name for pathfinder Flow tracker tracker and exporter settings

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
+      record export on interval 300000
       exporter DPI-EXPORTER
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3000000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -261,7 +261,7 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.143.1/32
 !
 interface Ethernet1
@@ -272,7 +272,7 @@ interface Ethernet1.42
    description Comcast
    no shutdown
    encapsulation dot1q vlan 42
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
@@ -284,7 +284,7 @@ interface Ethernet2.42
    description Colt_10666
    no shutdown
    encapsulation dot1q vlan 666
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.16.6.6/31
 !
 interface Ethernet52
@@ -292,7 +292,7 @@ interface Ethernet52
    no shutdown
    mtu 9214
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.17.0.1/31
 !
 interface Ethernet52.142
@@ -300,7 +300,7 @@ interface Ethernet52.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.1/31
 !
@@ -309,7 +309,7 @@ interface Ethernet52.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.1/31
 !
@@ -318,7 +318,7 @@ interface Ethernet52.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf IT
    ip address 172.17.0.1/31
 !
