--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -197,7 +197,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.17.0.9/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.1000
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet2.1000
@@ -210,7 +210,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.9/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.142
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet2.142
@@ -223,7 +223,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.9/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.666
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet2.666
@@ -236,7 +236,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.9/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet2
@@ -247,7 +247,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.17.0.11/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.1000
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet2.1000
@@ -260,7 +260,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.11/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.142
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet2.142
@@ -273,7 +273,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.11/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.666
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet2.666
@@ -286,7 +286,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.11/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet2
   peer_type: l3_interface
   ip_address: 172.15.6.6/31
@@ -294,7 +294,7 @@ ethernet_interfaces:
   type: routed
   description: Colt_10423
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -407,16 +407,16 @@ agents:
 flow_tracking:
   hardware:
     trackers:
-    - name: WAN-FLOW-TRACKER
+    - name: FLOW-TRACKER
       record_export:
         on_inactive_timeout: 70000
-        on_interval: 5000
+        on_interval: 300000
       exporters:
       - name: DPI-EXPORTER
         collector:
           host: 127.0.0.1
         local_interface: Loopback0
-        template_interval: 5000
+        template_interval: 3000000
     shutdown: false
 ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
@@ -695,7 +695,7 @@ dps_interfaces:
   mtu: 9214
   ip_address: 192.168.142.3/32
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
     description: cv-pathfinder-edge2B_VTEP
