--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
+      record export on interval 300000
       exporter DPI-EXPORTER
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3000000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -144,14 +144,14 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.255.1/32
 !
 interface Ethernet1
    description ATT_666
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
@@ -159,14 +159,14 @@ interface Ethernet2
    description Colt_10555
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.15.5.5/31
 !
 interface Ethernet3
    description Comcast-5G_AF830
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.20.20.20/31
 !
 interface Loopback0
