--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
+      record export on interval 300000
       exporter DPI-EXPORTER
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3000000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -217,14 +217,14 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.142.1/32
 !
 interface Ethernet1
    description ATT_666_peer3_Ethernet42
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
@@ -232,14 +232,14 @@ interface Ethernet2
    description Colt_10555
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.15.5.5/31
 !
 interface Ethernet3
    description Comcast-5G_AF830
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.20.20.20/31
 !
 interface Ethernet52
@@ -247,7 +247,7 @@ interface Ethernet52
    no shutdown
    mtu 9214
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.17.0.1/31
 !
 interface Ethernet52.142
@@ -255,7 +255,7 @@ interface Ethernet52.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.1/31
 !
@@ -264,7 +264,7 @@ interface Ethernet52.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.1/31
 !
@@ -273,7 +273,7 @@ interface Ethernet52.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf IT
    ip address 172.17.0.1/31
 !
