--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
+      record export on interval 300000
       exporter DPI-EXPORTER
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3000000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -212,14 +212,14 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.142.2/32
 !
 interface Ethernet1
    description ATT_423-01
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
@@ -228,7 +228,7 @@ interface Ethernet52
    no shutdown
    mtu 9214
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.17.0.5/31
 !
 interface Ethernet52.142
@@ -236,7 +236,7 @@ interface Ethernet52.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.5/31
 !
@@ -245,7 +245,7 @@ interface Ethernet52.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.5/31
 !
@@ -254,7 +254,7 @@ interface Ethernet52.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf IT
    ip address 172.17.0.5/31
 !
@@ -263,7 +263,7 @@ interface Ethernet53
    no shutdown
    mtu 9214
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.17.0.7/31
 !
 interface Ethernet53.142
@@ -271,7 +271,7 @@ interface Ethernet53.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.7/31
 !
@@ -280,7 +280,7 @@ interface Ethernet53.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.7/31
 !
@@ -289,7 +289,7 @@ interface Ethernet53.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    vrf IT
    ip address 172.17.0.7/31
 !
