--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge-custom-default-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge-custom-default-policy.yml
@@ -7,6 +7,15 @@ underlay_routing_protocol: none
 
 bgp_as: 65000
 
+flow_tracking_settings:
+  flow_tracker_name: custom_flow_track_name
+  record_export:
+    on_inactive_timeout: 50000
+    on_interval: 300331
+  exporter:
+    name: ayush_exporter
+    template_interval: 40000
+
 cv_pathfinder_regions:
   - name: AVD_Land_West
     id: 42
