Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -16,7 +16,7 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
-hostname cv-pathfinder-edge-no-common-path-group
+hostname cv-pathfinder-edge1
 !
 router adaptive-virtual-topology
    topology role edge
@@ -226,7 +226,7 @@ interface Ethernet2
    dhcp client accept default-route
 !
 interface Ethernet3
-   description TEMPORARY FOR PR SAKE
+   description ATT_404
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
@@ -271,7 +271,7 @@ interface Loopback0
    ip address 192.168.42.2/32
 !
 interface Vxlan1
-   description cv-pathfinder-edge-no-common-path-group_VTEP
+   description cv-pathfinder-edge1_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 166
@@ -376,6 +376,8 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
+   neighbor WAN-OVERLAY-PEERS bfd
+   neighbor WAN-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
    neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
