--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -314,7 +314,7 @@ all:
                 SITE_HA_DISABLED:
                   hosts:
                     cv-pathfinder-edge:
-                    cv-pathfinder-edge-no-common-path-group:
+                    cv-pathfinder-edge1:
                     site-ha-disabled-leaf:
                 CV_PATHFINDERS:
                   hosts:
