Fix: Properly test and handle policy entry with no common path-groups

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -51,6 +51,9 @@ router adaptive-virtual-topology
       match application-profile VIDEO
          avt profile PROD-AVT-POLICY-VIDEO
       !
+      match application-profile MPLS-ONLY
+         avt profile PROD-AVT-POLICY-MPLS-ONLY
+      !
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
@@ -79,6 +82,9 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-MPLS-ONLY
+      path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
@@ -109,6 +115,7 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+      avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
    !
    vrf TRANSIT
       avt policy TRANSIT-AVT-POLICY
@@ -189,6 +196,10 @@ router path-selection
       path-group INET
       path-group LAN_HA
       path-group MPLS priority 2
+   !
+   load-balance policy LB-PROD-AVT-POLICY-MPLS-ONLY
+      path-group LAN_HA
+      path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
@@ -285,6 +296,8 @@ application traffic recognition
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
+   !
+   application-profile MPLS-ONLY
    !
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
