--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1259,37 +1259,33 @@ $defs:
                 type: bool
                 default: true
                 description: Enable / Disable IPsec over HA path-group when HA is enabled.
-              mode:
-                type: str
-                valid_values:
-                  - uplinks
-                  - custom
-                default: uplinks
+              ha_interfaces:
                 description: |-
-                  Indicates the WAN HA interfaces selection mode.
-                  By default uplink interfaces in VRF default are used.
-          wan_ha_interfaces:
-            documentation_options:
-              table: node-type-wan-configuration
-            description: |-
-              PREVIEW: This key is currently not supported
-
-              Local WAN HA interfaces
-              Each list item supports range syntax that can be expanded into a list of interfaces.
-            type: list
-            items:
-              type: str
-              pattern: "Ethernet[\\d/]+"
-          # TODO this can support only one link - could have multiple subnets.
-          wan_ha_ipv4_pool:
-            documentation_options:
-              table: node-type-wan-configuration
-            description: |-
-              PREVIEW: This key is currently not supported
-
-              IP address pool used for WAN HA connectivity. IP is derived from the node id.
-            type: str
-            format: ipv4_cidr
+                  Local WAN HA interfaces
+                  Overwrite the default behavior which is to pick all the interfaces.
+                  Each list item supports range syntax that can be expanded into a list of interfaces.
+                  Can be used to filter uplink interfaces when there are multiple uplinks.
+                  Limitations:
+                    Either all interfaces must be uplinks or all interfaces must not be uplinks.
+                    Only one interface is supported for non uplinks.
+                type: list
+                items:
+                  type: str
+                  pattern: "Ethernet[\\d/]+"
+              ha_ipv4_pool:
+                description: |-
+                  IP address pool used for WAN HA connectivity.
+                  IP is derived from the node id.
+                  Not used for uplink interfaces.
+                type: str
+                format: ipv4_cidr
+              max_ha_interfaces:
+                type: int
+                convert_types:
+                  - str
+                description: |
+                  Number of parallel links towards HA switches.
+                  Can be used to reserve interfaces for future parallel HA links.
           dps_mss_ipv4:
             documentation_options:
               table: node-type-wan-configuration
