--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -128,74 +128,46 @@ anta.tests.hardware:
 anta.tests.interfaces:
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet1
-      protocol_status: up
-      state: up
+    - name: Ethernet1
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet1 - P2P_LINK_TO_DC1-LEAF1A_Ethernet7
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet1 - P2P_LINK_TO_DC1-LEAF1A_Ethernet7 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet2
-      protocol_status: up
-      state: up
+    - name: Ethernet2
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet2 - P2P_LINK_TO_DC1-LEAF1B_Ethernet7
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet2 - P2P_LINK_TO_DC1-LEAF1B_Ethernet7 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet3
-      protocol_status: up
-      state: up
+    - name: Ethernet3
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet3 - mpls-sp-1_DC1-MPLS-4
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet3 - mpls-sp-1_DC1-MPLS-4 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet4
-      protocol_status: up
-      state: up
+    - name: Ethernet4
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet4 - isp-1_DC1-INET-4
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet4 - isp-1_DC1-INET-4 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Loopback0
-      protocol_status: up
-      state: up
+    - name: Loopback0
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Loopback0 - Router_ID
-      description: Loopback Interface Status & Line Protocol == 'up'
+      custom_field: Interface Loopback0 - Router_ID = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Dps1
-      protocol_status: up
-      state: up
+    - name: Dps1
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Dps1 - DPS Interface
-      description: DPS Interface Status & Line Protocol == 'up'
+      custom_field: Interface Dps1 - DPS Interface = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Vxlan1
-      protocol_status: up
-      state: up
+    - name: Vxlan1
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Vxlan1
-      description: Vxlan Interface Status & Line Protocol == 'up'
+      custom_field: Interface Vxlan1 = 'up'
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
