--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine2-catalog.yml
@@ -212,74 +212,48 @@ anta.tests.hardware:
 anta.tests.interfaces:
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet1
-      protocol_status: up
-      state: up
+    - name: Ethernet1
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet1 - P2P_LINK_TO_DC2-LEAF1A_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet1 - P2P_LINK_TO_DC2-LEAF1A_Ethernet2 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet2
-      protocol_status: up
-      state: up
+    - name: Ethernet2
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet2 - P2P_LINK_TO_DC2-LEAF1B_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet2 - P2P_LINK_TO_DC2-LEAF1B_Ethernet2 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet3
-      protocol_status: up
-      state: up
+    - name: Ethernet3
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet3 - P2P_LINK_TO_DC2-LEAF2A_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet3 - P2P_LINK_TO_DC2-LEAF2A_Ethernet2 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet4
-      protocol_status: up
-      state: up
+    - name: Ethernet4
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet4 - P2P_LINK_TO_DC2-LEAF2B_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet4 - P2P_LINK_TO_DC2-LEAF2B_Ethernet2 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet5
-      protocol_status: up
-      state: up
+    - name: Ethernet5
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet5 - P2P_LINK_TO_DC2-LEAF3A.ARISTA.COM_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet5 - P2P_LINK_TO_DC2-LEAF3A.ARISTA.COM_Ethernet2
+        = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Ethernet6
-      protocol_status: up
-      state: up
+    - name: Ethernet6
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Ethernet6 - P2P_LINK_TO_DC2-LEAF3B.ARISTA.COM_Ethernet2
-      description: Ethernet Interface & Line Protocol == 'up'
+      custom_field: Interface Ethernet6 - P2P_LINK_TO_DC2-LEAF3B.ARISTA.COM_Ethernet2
+        = 'up'
 - VerifyInterfacesStatus:
     interfaces:
-    - interface: Loopback0
-      protocol_status: up
-      state: up
+    - name: Loopback0
+      status: up
     result_overwrite:
-      categories:
-      - Interface State
-      custom_field: Loopback0 - EVPN_Overlay_Peering
-      description: Loopback Interface Status & Line Protocol == 'up'
+      custom_field: Interface Loopback0 - EVPN_Overlay_Peering = 'up'
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
