--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
@@ -173,8 +173,7 @@ router_bgp:
           additional_paths:
             install: true
             receive: true
-            send:
-              ecmp: true
+            send: ecmp
         neighbors:
           - ip_address: 10.2.3.4
             activate: true
