--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
@@ -50,8 +50,8 @@ router_bgp:
           additional_paths:
             install_ecmp_primary: true
             receive: true
-            send:
-              ecmp_limit: 4
+            send: ecmp
+            ecmp_limit: 4
           redistribute_internal: false
         neighbors:
           - ip_address: 1.2.3.4
@@ -80,8 +80,7 @@ router_bgp:
           additional_paths:
             install: true
             receive: true
-            send:
-              any: true
+            send: any
           redistribute_internal: false
         neighbors:
           - ip_address: aa::1
@@ -176,20 +175,18 @@ router_bgp:
       address_family_ipv4:
         bgp:
           additional_paths:
-            send:
-              backup: true
+            send: backup
       address_family_ipv6:
         bgp:
           additional_paths:
-            send:
-              limit: 3
+            send: limit
+            limit: 3
 
     - name: VRF03
       address_family_ipv4:
         bgp:
           additional_paths:
-            send:
-              ecmp: true
+            send: ecmp
       redistribute_routes:
         - source_protocol: dynamic
           rcf: VRF_RCF_DYNAMIC()
