Removed primary keys from j2 templates

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/influxdb.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/influxdb.cfg
@@ -23,7 +23,7 @@ monitor telemetry influx
       url https://influx_test1.localhost
       database name test1
       retention policy test1
-      vrf test1
+      vrf test
       username test1 password 7 test1
    source socket socket1
       url unix:///var/run/example2.sock
