--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_route_servers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_route_servers.schema.yml
@@ -51,4 +51,4 @@ keys:
                       description: Interface name.
                     ip_address:
                       type: str
-                      description: The public IP address of the Route Reflector for this path-group.
+                      description: The public IPv4 address (without mask) of the Route Reflector for this path-group.
