--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3764,8 +3764,8 @@ keys:
                       description: Interface name.
                     ip_address:
                       type: str
-                      description: The public IP address of the Route Reflector for
-                        this path-group.
+                      description: The public IP address without mask of the Route
+                        Reflector for this path-group.
   wan_stun_dtls_disable:
     type: bool
     documentation_options:
